--- a/pages/10647.html
+++ b/pages/10647.html
@@ -317,7 +317,12 @@ margin-left: 0em;
 
 <h4 id="riemannian_geometry">Riemannian geometry</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/Riemannian+geometry">Riemannian geometry</a></strong></p><h2 id="basic_definitions">Basic definitions</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/Riemannian+geometry">Riemannian geometry</a></strong></p>
+
+<h2 id="basic_definitions">Basic definitions</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Riemannian+manifold">Riemannian manifold</a></p>
 
@@ -359,7 +364,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Riemann+curvature">Riemann curvature</a>, <a class="existingWikiWord" href="/nlab/show/torsion+of+a+metric+connection">torsion of a metric connection</a></li>
 </ul>
 </li>
-</ul><h2 id="further_concepts">Further concepts</h2><ul>
+</ul>
+
+<h2 id="further_concepts">Further concepts</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Hodge+inner+product">Hodge inner product</a>, <a class="existingWikiWord" href="/nlab/show/Hodge+star+operator">Hodge star operator</a></p>
 </li>
@@ -367,9 +376,17 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/gradient">gradient</a>, <a class="existingWikiWord" href="/nlab/show/gradient+flow">gradient flow</a></p>
 </li>
-</ul><h2 id="theorems">Theorems</h2><ul>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/Poincar%C3%A9+conjecture">Poincaré conjecture</a>-theorem</li>
-</ul><h2 id="applications">Applications</h2><ul>
+</ul>
+
+<h2 id="applications">Applications</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/gravity">gravity</a></p>
 
@@ -377,11 +394,12 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Einstein-Hilbert+action">Einstein-Hilbert action</a>, <a class="existingWikiWord" href="/nlab/show/Einstein+equations">Einstein equations</a>, <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a></li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/Riemannian+geometry+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -411,15 +429,19 @@ margin-left: 0em;
 Ric_{lm} = -\frac{1}{2} \sum_{j,k} g^{jk} \partial_j \partial_k g_{lm} + Q_{lm}(g, \nabla g)
 
 </annotation></semantics></math></div>
-<p>where <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>g</mi> <mi>jk</mi></msup></mrow><annotation encoding="application/x-tex">g^{jk}</annotation></semantics></math> denotes the inverse of the metric tensor and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mi>lm</mi></msub></mrow><annotation encoding="application/x-tex">Q_{lm}</annotation></semantics></math> is a quadratic form in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>∇</mo><mi>g</mi></mrow><annotation encoding="application/x-tex">\nabla g</annotation></semantics></math> with coefficients that are rational expressions in which numerators are polynomials <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi></mrow><annotation encoding="application/x-tex">g</annotation></semantics></math> and the denominator depends only on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msqrt><mrow><mi>det</mi><mi>g</mi></mrow></msqrt></mrow><annotation encoding="application/x-tex">\sqrt{\det g}</annotation></semantics></math>. Note that this formula involves only first derivatives of the metric tensor. This representation is especially useful in two ways: First, there are theorems that give bounds on the regularity of the metric tensor in harmonic coordinates under geometric assumptions (Anderson, Cheeger and Naber). Second, as this expression is a quasilinear elliptic PDE, one can conclude on regularity bounds for the metric tensor from regularity estimates for the Ricci tensor.</p>
+<p>where <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>g</mi> <mi>jk</mi></msup></mrow><annotation encoding="application/x-tex">g^{jk}</annotation></semantics></math> denotes the inverse of the metric tensor and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mi>lm</mi></msub></mrow><annotation encoding="application/x-tex">Q_{lm}</annotation></semantics></math> is a quadratic form in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>∇</mo><mi>g</mi></mrow><annotation encoding="application/x-tex">\nabla g</annotation></semantics></math> with coefficients that are rational expressions in which numerators are polynomials <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi></mrow><annotation encoding="application/x-tex">g</annotation></semantics></math> and the denominator depends only on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msqrt><mrow><mi>det</mi><mi>g</mi></mrow></msqrt></mrow><annotation encoding="application/x-tex">\sqrt{\det g}</annotation></semantics></math>. Note that this formula describes the metric tensor as a quasilinear elliptic PDE. This representation is especially useful in two ways: First, there are theorems that give bounds on the regularity of the metric tensor in harmonic coordinates under geometric assumptions (Anderson, Cheeger and Naber). Second, as this expression is a quasilinear elliptic PDE, one can conclude on regularity bounds for the metric tensor from regularity estimates for the Ricci tensor. This argument allows for a regularity bootstrap in case of <a class="existingWikiWord" href="/nlab/show/Einstein+manifold">Einstein manifolds</a>: given a rough Einstein metric with <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math> derivatives, the regularity theory for quasilinear PDEs gives <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi><mo>+</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">k+2</annotation></semantics></math>-regularity of the metric tensor. But the Einstein property <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi><mo>=</mo><mi>λ</mi><mi>Ric</mi></mrow><annotation encoding="application/x-tex">g = \lambda Ric</annotation></semantics></math> implies the same regularity for the Ricci tensor. Hence one can apply the argument again and add infinitum.</p>
 
 <h2 id="related_concepts">Related concepts</h2>
+<div>
+
 <table><thead><tr><th><a class="existingWikiWord" href="/nlab/show/curvature">curvature</a> in <a class="existingWikiWord" href="/nlab/show/Riemannian+geometry">Riemannian geometry</a></th></tr></thead><tbody><tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Riemann+curvature">Riemann curvature</a></td></tr>
 <tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Ricci+curvature">Ricci curvature</a></td></tr>
 <tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/scalar+curvature">scalar curvature</a></td></tr>
 <tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/sectional+curvature">sectional curvature</a></td></tr>
 <tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/p-curvature">p-curvature</a></td></tr>
 </tbody></table>
+
+</div>
 <ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Einstein-Hilbert+action">Einstein-Hilbert action</a></p>
@@ -469,14 +491,14 @@ Ric_{lm} = -\frac{1}{2} \sum_{j,k} g^{jk} \partial_j \partial_k g_{lm} + Q_{lm}(
 
 <div class="revisedby">
   <p>
-  Last revised on December  2, 2018 at 07:43:32.
+  Last revised on December  4, 2018 at 05:38:50.
   See the <a href="https://ncatlab.org/nlab/history/Ricci curvature" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Ricci+curvature" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Ricci+curvature/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/Ricci+curvature" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Ricci+curvature" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Ricci+curvature" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Ricci+curvature/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/Ricci+curvature" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Ricci+curvature" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Ricci curvature/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
