--- a/pages/8209.html
+++ b/pages/8209.html
@@ -317,7 +317,12 @@ margin-left: 0em;
 
 <h4 id="physics">Physics</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p><h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p>
+
+<h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2>
+
+<ul>
 <li>
 <p><em><a class="existingWikiWord" href="/nlab/show/higher+category+theory+and+physics">(higher) category theory and physics</a></em></p>
 </li>
@@ -329,7 +334,13 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/books+and+reviews+in+mathematical+physics">books and reviews</a>, <a class="existingWikiWord" href="/nlab/show/physics+resources">physics resources</a></p>
 </li>
-</ul><hr /><p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p><p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p><ul>
+</ul>
+<hr />
+<p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p>
+
+<ul>
 <li>
 <p><strong><a class="existingWikiWord" href="/nlab/show/mechanics">mechanics</a></strong></p>
 
@@ -881,11 +892,12 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Riemann+hypothesis+and+physics">Riemann hypothesis and physics</a></li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/physicscontents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -897,12 +909,14 @@ margin-left: 0em;
 <li><a href='#nonperturbative_regime'>Non-perturbative regime</a></li>
 <li><a href='#perturbative_regime'>Perturbative regime</a></li>
 </ul>
+<li><a href='#in_cosmology'>In cosmology</a></li>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 <ul>
 <li><a href='#general'>General</a></li>
 <li><a href='#nonperturbative_aspects'>Non-perturbative aspects</a></li>
 <li><a href='#experimental_realization'>Experimental realization</a></li>
+<li><a href='#in_early_universe_cosmology'>In early universe cosmology</a></li>
 <li><a href='#ReferencesViaAdSCFT'>Description via AdS/CFT</a></li>
 </ul>
 </ul>
@@ -930,6 +944,22 @@ margin-left: 0em;
 
 <p>At yet higher energies, the quark-gluon plasma is eventually supposed to be weakly <a class="existingWikiWord" href="/nlab/show/coupling+constant">coupled</a> again, due to <a class="existingWikiWord" href="/nlab/show/asymptotic+freedom">asymptotic freedom</a> (e.g. <a href="#Blaizot03">Blaizot 03</a>)</p>
 
+<h2 id="in_cosmology">In cosmology</h2>
+
+<p>In the <a class="existingWikiWord" href="/nlab/show/standard+model+of+cosmology">standard model of cosmology</a> a quark gluon plasma filled the universe about <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mn>10</mn> <mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>6</mn></mrow></msup></mrow><annotation encoding="application/x-tex">10^{-6}</annotation></semantics></math> comoving seconds after the big bag. Decrease of <a class="existingWikiWord" href="/nlab/show/temperature">temperature</a> then led to the quark-gluon plasma condensing out to form <a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a> and in particular <a class="existingWikiWord" href="/nlab/show/baryons">baryons</a> and hence atomic <a class="existingWikiWord" href="/nlab/show/nuclei">nuclei</a> (<a class="existingWikiWord" href="/nlab/show/protons">protons</a> and <a class="existingWikiWord" href="/nlab/show/neutrons">neutrons</a>).</p>
+<center>
+<img src="https://ncatlab.org/nlab/files/EarlyHistory.jpg" width="420" />
+</center>
+<p><span class="newWikiWord">EarlyHistoryII.jpg<a href="/nlab/files/EarlyHistoryII.jpg">?</a></span></p>
+<center>
+<img src="https://ncatlab.org/nlab/files/EarlyHistoryII.jpg" width="420" />
+</center>
+<blockquote>
+<p>graphics grabbed from <a href="#Haseeb09">Haseeb 09</a></p>
+</blockquote>
+
+<p><br /></p>
+
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
@@ -943,6 +973,10 @@ margin-left: 0em;
 <ul>
 <li>
 <p>Stanislaw Mrowczynski, <em>Quark-Gluon Plasma</em>, Acta Phys.Polon.B29:3711, 1998 (<a href="https://arxiv.org/abs/nucl-th/9905005">arXiv:nucl-th/9905005</a>)</p>
+</li>
+
+<li id="Haseeb09">
+<p>Mahnaz Q. Haseeb, <em>Introduction to Quark Gluon Plasma</em>, 2009 (<a href="http://www.ncp.edu.pk/docs/fslp/dr_mehnaz_qgp_hydrodynamics_001.pdf">pdf</a>)</p>
 </li>
 
 <li>
@@ -995,6 +1029,24 @@ margin-left: 0em;
 
 <li id="AdcoxEtAl05">
 <p>K. Adcox, et al., <em>Formation of dense partonic matter in relativistic nucleus–nucleus collisions at RHIC: experimental evaluation by the PHENIX collaboration</em> Nuclear Physics A 757.1-2 (2005): 184-283.</p>
+</li>
+</ul>
+
+<h3 id="in_early_universe_cosmology">In early universe cosmology</h3>
+
+<p>Discussion of the quark gluon-plasma in <a class="existingWikiWord" href="/nlab/show/cosmology">cosmology</a> as the <a class="existingWikiWord" href="/nlab/show/phase+of+matter">phase of matter</a> shortly after the <a class="existingWikiWord" href="/nlab/show/standard+model+of+cosmology">big bang</a>:</p>
+
+<ul>
+<li>
+<p>K. Sakthi Murugesan, G. Janhavi, and P. R. Subramanian, <em>Importance of interactions in quark-gluon plasma: Baryon-number density contrast and primordial nucleosynthesis</em>, Phys. Rev. D 42, 3576 (1990) (<a href="https://doi.org/10.1103/PhysRevD.42.3576">arXiv:10.1103/PhysRevD.42.3576</a>)</p>
+</li>
+
+<li id="Kapusta01">
+<p>Joseph I Kapusta, <em>Quark-Gluon Plasma in the Early Universe</em>, in <em>Phase Transitions in the Early Universe: Theory and Observations</em> Springer, Dordrecht, 2001. 103-121 (<a href="https://arxiv.org/abs/astro-ph/0101516">arXiv:astro-ph/0101516</a>)</p>
+</li>
+
+<li>
+<p>S. M. Blinder, <em><a href="http://demonstrations.wolfram.com/EvolutionOfMatterFromAQuarkGluonPlasma/">Evolution of Matter from a Quark-Gluon Plasma</a></em>, Wolfram Demonstration Project, 2011</p>
 </li>
 </ul>
 
@@ -1063,14 +1115,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 29, 2018 at 13:31:35.
+  Last revised on December  4, 2018 at 07:58:47.
   See the <a href="https://ncatlab.org/nlab/history/quark-gluon plasma" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quark-gluon+plasma" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quark-gluon+plasma/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/quark-gluon+plasma" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quark-gluon+plasma" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quark-gluon+plasma" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quark-gluon+plasma/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/quark-gluon+plasma" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quark-gluon+plasma" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/quark-gluon plasma/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
