--- a/pages/2424.html
+++ b/pages/2424.html
@@ -342,10 +342,17 @@ margin-left: 0em;
 <h1 id="contents">Contents</h1>
 <div class='maruku_toc'>
 <ul>
+<li><a href='#quotes'>Quotes</a></li>
 <li><a href='#FieldMedalWork'>Fields medal work</a></li>
 <li><a href='#related_lab_entries'>related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</a></li>
 </ul>
 </div>
+
+<h2 id="quotes">Quotes</h2>
+
+<blockquote>
+<p id="Witten21stCenturyQuote"> Back in the early ’70s, the Italian physicist, <a class="existingWikiWord" href="/nlab/show/Daniele+Amati">Daniele Amati</a> reportedly said that string theory was part of 21st-century physics that fell by chance into the 20th century. I think it was a very wise remark. (<a class="existingWikiWord" href="/nlab/show/Edward+Witten">Edward Witten</a>, <a href="http://www.pbs.org/wgbh/nova/elegant/view-witten.html">Nova interview 2003</a>, also <a href="http://www.sns.ias.edu/~witten/papers/string.pdf">American Scientist Astronomy Issue 2002</a>)</p>
+</blockquote>
 
 <h2 id="FieldMedalWork">Fields medal work</h2>
 
@@ -454,14 +461,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 21, 2018 at 05:25:34.
+  Last revised on December  4, 2018 at 10:34:39.
   See the <a href="https://ncatlab.org/nlab/history/Edward Witten" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Edward+Witten" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Edward+Witten/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/Edward+Witten" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Edward+Witten" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Edward+Witten" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Edward+Witten/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/Edward+Witten" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Edward+Witten" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Edward Witten/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
