--- a/pages/8209.html
+++ b/pages/8209.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9284/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9284/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -951,7 +951,7 @@ margin-left: 0em;
 
 <h3 id="EarlyCosmologyAndNucleosynthesis">Early cosmology and nucleosynthesis</h3>
 
-<p>In the <a class="existingWikiWord" href="/nlab/show/standard+model+of+cosmology">standard model of cosmology</a> a quark gluon plasma filled the universe about <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mn>10</mn> <mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>6</mn></mrow></msup></mrow><annotation encoding="application/x-tex">10^{-6}</annotation></semantics></math> comoving seconds after the big bag. Decrease of <a class="existingWikiWord" href="/nlab/show/temperature">temperature</a> then led to the quark-gluon plasma condensing out to form <a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a> and in particular <a class="existingWikiWord" href="/nlab/show/baryons">baryons</a> and hence in particular <a class="existingWikiWord" href="/nlab/show/nucleons">nucleons</a> (<a class="existingWikiWord" href="/nlab/show/protons">protons</a> and <a class="existingWikiWord" href="/nlab/show/neutrons">neutrons</a>) and eventually <a class="existingWikiWord" href="/nlab/show/atomic+nuclei">atomic nuclei</a> (cosmic <span class="newWikiWord">nucleosynthesis<a href="/nlab/new/nucleosynthesis">?</a></span>).</p>
+<p>In the <a class="existingWikiWord" href="/nlab/show/standard+model+of+cosmology">standard model of cosmology</a> a quark gluon plasma filled the universe about <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mn>10</mn> <mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>6</mn></mrow></msup></mrow><annotation encoding="application/x-tex">10^{-6}</annotation></semantics></math> comoving seconds after the <a class="existingWikiWord" href="/nlab/show/Big+Bang">Big Bang</a>. Decrease of <a class="existingWikiWord" href="/nlab/show/temperature">temperature</a> then led to the quark-gluon plasma condensing out to form <a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a> and in particular <a class="existingWikiWord" href="/nlab/show/baryons">baryons</a> and hence in particular <a class="existingWikiWord" href="/nlab/show/nucleons">nucleons</a> (<a class="existingWikiWord" href="/nlab/show/protons">protons</a> and <a class="existingWikiWord" href="/nlab/show/neutrons">neutrons</a>) and eventually <a class="existingWikiWord" href="/nlab/show/atomic+nuclei">atomic nuclei</a> (cosmic <span class="newWikiWord">nucleosynthesis<a href="/nlab/new/nucleosynthesis">?</a></span>).</p>
 <center>
 <img src="https://ncatlab.org/nlab/files/EarlyHistory.jpg" width="420" />
 </center><center>
@@ -1170,14 +1170,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  4, 2018 at 08:51:52.
+  Last revised on December  4, 2018 at 10:10:15.
   See the <a href="https://ncatlab.org/nlab/history/quark-gluon plasma" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quark-gluon+plasma" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quark-gluon+plasma/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/quark-gluon+plasma" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quark-gluon+plasma" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quark-gluon+plasma" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quark-gluon+plasma/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/quark-gluon+plasma" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quark-gluon+plasma" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/quark-gluon plasma/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
