--- a/pages/19964.html
+++ b/pages/19964.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9327/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9327/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -911,6 +911,7 @@ margin-left: 0em;
 <li><a href='#references'>References</a></li>
 <ul>
 <li><a href='#general'>General</a></li>
+<li><a href='#relation_to_instantons_calorons_solitons_monopoles'>Relation to instantons, calorons, solitons, monopoles</a></li>
 <li><a href='#in_string_theory'>In string theory</a></li>
 </ul>
 </ul>
@@ -972,7 +973,7 @@ margin-left: 0em;
 <li id="Skyrme62">Tony Skyrme, <em>A unified field theory of mesons and baryons</em>, Nuclear Physics Volume 31, March–April 1962, Pages 556-569 (<a href="https://doi.org/10.1016/0029-5582(62)90775-7">doi:10.1016/0029-5582(62)90775-7</a>)</li>
 </ul>
 
-<p>Fruther developments and review:</p>
+<p>Further developments and review:</p>
 
 <ul>
 <li id="RhoZahed16">M. Rho, Ismail Zahed (eds.) <em>The Multifaceted Skyrmion</em>, World Scientific 2016 (<a href="https://doi.org/10.1142/9710">doi:10.1142/9710</a>)</li>
@@ -982,6 +983,26 @@ margin-left: 0em;
 
 <ul>
 <li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Skyrmion">Skyrmion</a></em></li>
+</ul>
+
+<h3 id="relation_to_instantons_calorons_solitons_monopoles">Relation to instantons, calorons, solitons, monopoles</h3>
+
+<p>The construction of Skyrmions from <a class="existingWikiWord" href="/nlab/show/instantons">instantons</a> is due to</p>
+
+<ul>
+<li id="AtiyahManton89"><a class="existingWikiWord" href="/nlab/show/Michael+Atiyah">Michael Atiyah</a>, N S Manton, <em>Skyrmions from instantons</em>, Phys. Lett. B, 222(3):438–442, 1989 (<a href="https://doi.org/10.1016/0370-2693(89)90340-7">doi:v</a>)</li>
+</ul>
+
+<p>The relation between skyrmions, <a class="existingWikiWord" href="/nlab/show/instantons">instantons</a>, <a class="existingWikiWord" href="/nlab/show/calorons">calorons</a>, <a class="existingWikiWord" href="/nlab/show/solitons">solitons</a> and <a class="existingWikiWord" href="/nlab/show/monopoles">monopoles</a> is usefully reviewed and further developed in</p>
+
+<ul>
+<li id="Cork18a">
+<p><a class="existingWikiWord" href="/nlab/show/Josh+Cork">Josh Cork</a>, <em>Calorons, symmetry, and the soliton trinity</em>, PhD thesis, University of Leeds 2018 (<a href="http://etheses.whiterose.ac.uk/22097/">web</a>)</p>
+</li>
+
+<li id="Cork18b">
+<p><a class="existingWikiWord" href="/nlab/show/Josh+Cork">Josh Cork</a>, <em>Skyrmions from calorons</em>, J. High Energ. Phys. (2018) 2018: 137 (<a href="https://arxiv.org/abs/1810.04143">arXiv:1810.04143</a>)</p>
+</li>
 </ul>
 
 <h3 id="in_string_theory">In string theory</h3>
@@ -1009,14 +1030,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  3, 2018 at 08:15:56.
+  Last revised on December  5, 2018 at 00:50:51.
   See the <a href="https://ncatlab.org/nlab/history/skyrmion" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/skyrmion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/skyrmion/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/skyrmion" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/skyrmion" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/skyrmion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/skyrmion/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/skyrmion" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/skyrmion" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/skyrmion/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
