--- a/pages/6520.html
+++ b/pages/6520.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -317,7 +317,12 @@ margin-left: 0em;
 
 <h4 id="physics">Physics</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p><h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p>
+
+<h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2>
+
+<ul>
 <li>
 <p><em><a class="existingWikiWord" href="/nlab/show/higher+category+theory+and+physics">(higher) category theory and physics</a></em></p>
 </li>
@@ -329,7 +334,13 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/books+and+reviews+in+mathematical+physics">books and reviews</a>, <a class="existingWikiWord" href="/nlab/show/physics+resources">physics resources</a></p>
 </li>
-</ul><hr /><p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p><p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p><ul>
+</ul>
+<hr />
+<p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p>
+
+<ul>
 <li>
 <p><strong><a class="existingWikiWord" href="/nlab/show/mechanics">mechanics</a></strong></p>
 
@@ -881,11 +892,12 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Riemann+hypothesis+and+physics">Riemann hypothesis and physics</a></li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/physicscontents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -902,6 +914,7 @@ margin-left: 0em;
 <li><a href='#References'>References</a></li>
 <ul>
 <li><a href='#in_quantum_field_theory_and_specifically_yangmills_theory'>In quantum field theory and specifically Yang-Mills theory</a></li>
+<li><a href='#relation_to_skyrmions_calorons_monopoles'>Relation to Skyrmions, calorons, monopoles</a></li>
 <li><a href='#in_string_theory_2'>In string theory</a></li>
 </ul>
 </ul>
@@ -1010,7 +1023,10 @@ margin-left: 0em;
 <p><a href="string+theory+FAQ#NonConvergenceOfPerturbationSeries">string theory FAQ – Isn’t it fatal that the string perturbation series does not converge?</a></p>
 </li>
 </ul>
-<p><strong><a class="existingWikiWord" href="/nlab/show/gauge+field">gauge field</a></strong>: models and components</p><table><thead><tr><th><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong></th><th><strong><a class="existingWikiWord" href="/nlab/show/differential+geometry">differential geometry</a></strong></th><th><strong><a class="existingWikiWord" href="/nlab/show/differential+cohomology">differential cohomology</a></strong></th></tr></thead><tbody><tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/gauge+field">gauge field</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/connection+on+a+bundle">connection on a bundle</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/cocycle">cocycle</a> in <a class="existingWikiWord" href="/nlab/show/differential+cohomology">differential cohomology</a></td></tr>
+<div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/gauge+field">gauge field</a></strong>: models and components</p>
+
+<table><thead><tr><th><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong></th><th><strong><a class="existingWikiWord" href="/nlab/show/differential+geometry">differential geometry</a></strong></th><th><strong><a class="existingWikiWord" href="/nlab/show/differential+cohomology">differential cohomology</a></strong></th></tr></thead><tbody><tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/gauge+field">gauge field</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/connection+on+a+bundle">connection on a bundle</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/cocycle">cocycle</a> in <a class="existingWikiWord" href="/nlab/show/differential+cohomology">differential cohomology</a></td></tr>
 <tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/instanton+sector">instanton</a>/<a class="existingWikiWord" href="/nlab/show/charge">charge</a> sector</td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/principal+bundle">principal bundle</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/cocycle">cocycle</a> in underlying <a class="existingWikiWord" href="/nlab/show/cohomology">cohomology</a></td></tr>
 <tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/gauge+potential">gauge potential</a></td><td style="text-align: left;">local connection <a class="existingWikiWord" href="/nlab/show/differential+form">differential form</a></td><td style="text-align: left;">local connection <a class="existingWikiWord" href="/nlab/show/differential+form">differential form</a></td></tr>
 <tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/field+strength">field strength</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/curvature">curvature</a></td><td style="text-align: left;">underlying <a class="existingWikiWord" href="/nlab/show/cocycle">cocycle</a> in <a class="existingWikiWord" href="/nlab/show/de+Rham+cohomology">de Rham cohomology</a></td></tr>
@@ -1019,6 +1035,8 @@ margin-left: 0em;
 <tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/BRST+complex">BRST complex</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Lie+algebroid">Lie algebroid</a> of <a class="existingWikiWord" href="/nlab/show/moduli+stack">moduli stack</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Lie+algebroid">Lie algebroid</a> of <a class="existingWikiWord" href="/nlab/show/moduli+stack">moduli stack</a></td></tr>
 <tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/extended+Lagrangian">extended Lagrangian</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/universal+Chern-Simons+n-bundle">universal Chern-Simons n-bundle</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/universal+characteristic+map">universal characteristic map</a></td></tr>
 </tbody></table>
+
+</div>
 <h2 id="References">References</h2>
 
 <h3 id="in_quantum_field_theory_and_specifically_yangmills_theory">In quantum field theory and specifically Yang-Mills theory</h3>
@@ -1085,6 +1103,26 @@ margin-left: 0em;
 </li>
 </ul>
 
+<h3 id="relation_to_skyrmions_calorons_monopoles">Relation to Skyrmions, calorons, monopoles</h3>
+
+<p>The construction of <a class="existingWikiWord" href="/nlab/show/Skyrmions">Skyrmions</a> from <a class="existingWikiWord" href="/nlab/show/instantons">instantons</a> is due to</p>
+
+<ul>
+<li id="AtiyahManton89"><a class="existingWikiWord" href="/nlab/show/Michael+Atiyah">Michael Atiyah</a>, N S Manton, <em>Skyrmions from instantons</em>, Phys. Lett. B, 222(3):438–442, 1989 (<a href="https://doi.org/10.1016/0370-2693(89)90340-7">doi:v</a>)</li>
+</ul>
+
+<p>The relation between <a class="existingWikiWord" href="/nlab/show/skyrmions">skyrmions</a>, <a class="existingWikiWord" href="/nlab/show/instantons">instantons</a>, <a class="existingWikiWord" href="/nlab/show/calorons">calorons</a>, <a class="existingWikiWord" href="/nlab/show/solitons">solitons</a> and <a class="existingWikiWord" href="/nlab/show/monopoles">monopoles</a> is usefully reviewed and further developed in</p>
+
+<ul>
+<li id="Cork18a">
+<p><a class="existingWikiWord" href="/nlab/show/Josh+Cork">Josh Cork</a>, <em>Calorons, symmetry, and the soliton trinity</em>, PhD thesis, University of Leeds 2018 (<a href="http://etheses.whiterose.ac.uk/22097/">web</a>)</p>
+</li>
+
+<li id="Cork18b">
+<p><a class="existingWikiWord" href="/nlab/show/Josh+Cork">Josh Cork</a>, <em>Skyrmions from calorons</em>, J. High Energ. Phys. (2018) 2018: 137 (<a href="https://arxiv.org/abs/1810.04143">arXiv:1810.04143</a>)</p>
+</li>
+</ul>
+
 <h3 id="in_string_theory_2">In string theory</h3>
 
 <p>In <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a> (for <a class="existingWikiWord" href="/nlab/show/D-branes">D-branes</a>).</p>
@@ -1128,14 +1166,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 30, 2018 at 08:27:35.
+  Last revised on December  5, 2018 at 00:58:13.
   See the <a href="https://ncatlab.org/nlab/history/instanton" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/instanton" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/instanton/27" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(27 revisions)</span> | <a href="/nlab/show/diff/instanton" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/instanton" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/instanton" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/instanton/28" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(28 revisions)</span> | <a href="/nlab/show/diff/instanton" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/instanton" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/instanton/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
