--- a/pages/19113.html
+++ b/pages/19113.html
@@ -670,6 +670,10 @@ margin-left: 0em;
 
 <ul>
 <li>
+<p><a class="existingWikiWord" href="/nlab/show/regular+polytope">regular polytope</a>, <a class="existingWikiWord" href="/nlab/show/regular+polyhedron">regular polyhedron</a></p>
+</li>
+
+<li>
 <p><a class="existingWikiWord" href="/nlab/show/ADE+singularity">ADE singularity</a></p>
 </li>
 
@@ -779,7 +783,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  7, 2018 at 02:57:38.
+  Last revised on December  7, 2018 at 03:18:56.
   See the <a href="https://ncatlab.org/nlab/history/finite rotation group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
