--- a/pages/19984.html
+++ b/pages/19984.html
@@ -752,12 +752,13 @@ margin-left: 0em;
 <h2 id="introduction">Introduction</h2>
 
 <h3 id="overview">Overview</h3>
-<div style="float:right;margin:0 20px 10px 20px;"><img width="450" src="https://www.cs.bham.ac.uk/~vicaryjo/images/face_of_pentagon.jpg" alt="Screenshot of homotopy.io" /></div>
+<div style="float:right;margin:0 20px 10px 20px;"><img width="450" src="https://www.cs.bham.ac.uk/~vicaryjo/images/face_of_pentagon.jpg" alt="Screenshot of homotopy.io" />
+</div>
 <p>This page describes <em>homotopy.io</em>, a web-based <a class="existingWikiWord" href="/nlab/show/proof+assistant">proof assistant</a> for finitely-presented <a class="existingWikiWord" href="/nlab/show/globular+set">globular</a> <a class="existingWikiWord" href="/nlab/show/higher+categories"><em>n</em>-categories</a>, for arbitrary <em>n</em>. It is based on the theory of <a class="existingWikiWord" href="/nlab/show/associative+n-categories">associative <em>n</em>-categories (ANCs)</a>, which provides a strictly associative and unital model of composition that minimizes proof bureaucracy, with all the weak structure in homotopies of composites. The proof assistant allows the user to define generators for a higher category, compose them, apply homotopies, and visualize the resulting composites as <a class="existingWikiWord" href="/nlab/show/string+diagrams">string diagrams</a> in 2 dimensions or <a class="existingWikiWord" href="/nlab/show/surface+diagrams">surface diagrams</a> in 3 dimensions. Interaction with the proof assistant is entirely by direct manipulation using the mouse.</p>
 
 <p>The proof assistant is still under development, and is not yet released for general use. It can be considered a successor to the existing proof assistant <a class="existingWikiWord" href="/nlab/show/Globular">Globular</a>, which allows the construction of formal proofs in a strictly associative and unital model of 4-categories.</p>
 
-<p>Homotopy construction in <em>homotopy.io</em> enabled by two basic mechanisms: <em>contraction</em>, which makes the geometry locally more singular; and <em>expansion</em>, which makes the geometry locally more generic. These local moves are then propagated to the surrounding geometry by pushout and pullback constructions, ‘dragging’ neighbouring parts of the composite, and allowing the construction of nontrivial homotopies. It is an open question whether these contraction and expansion moves are capable of generating all possible homotopies in every dimension.</p>
+<p>Homotopy construction in <em>homotopy.io</em> is enabled by two basic mechanisms: <em>contraction</em>, which makes the geometry locally more singular; and <em>expansion</em>, which makes the geometry locally more generic. These local moves are then propagated to the surrounding geometry by pushout and pullback operations, ‘dragging’ neighbouring parts of the composite, and allowing the construction of nontrivial homotopies. It is an open question whether these contraction and expansion moves are capable of generating all possible homotopies in every dimension.</p>
 
 <p>The image at the top-right shows a 3d surface diagram of one side of the pentagon equation.</p>
 
@@ -769,11 +770,11 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><span class="newWikiWord">Christoph Dorn<a href="/nlab/new/Christoph+Dorn">?</a></span>, <em>Associative <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-categories</em>, talk at <em><a href="https://www.math.muni.cz/~loregianf/PSSL103/PSSL103.php">103rd Peripatetic Seminar on Sheaves and Logic</a></em> (<a href="https://www.math.muni.cz/~loregianf/PSSL103/slides/Dorn.pdf">pdf</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Christoph+Dorn">Christoph Dorn</a>, <em>Associative <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-categories</em>, talk at <em><a href="https://www.math.muni.cz/~loregianf/PSSL103/PSSL103.php">103rd Peripatetic Seminar on Sheaves and Logic</a></em> (<a href="https://www.math.muni.cz/~loregianf/PSSL103/slides/Dorn.pdf">pdf</a>)</p>
 </li>
 
 <li>
-<p><span class="newWikiWord">Christoph Dorn<a href="/nlab/new/Christoph+Dorn">?</a></span>, <em>Associative n-categories</em> PhD thesis (<a href="https://www.dornchristoph.com/writing/dphil_intro.pdf">pdf</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Christoph+Dorn">Christoph Dorn</a>, <em>Associative n-categories</em> PhD thesis (<a href="https://www.dornchristoph.com/writing/dphil_intro.pdf">pdf</a>)</p>
 </li>
 </ul>
 </body></html>
@@ -782,14 +783,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  8, 2018 at 01:54:35.
+  Last revised on December  8, 2018 at 15:30:57.
   See the <a href="https://ncatlab.org/nlab/history/homotopy.io" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/homotopy.io" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/homotopy.io/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/homotopy.io" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/homotopy.io" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/homotopy.io" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/homotopy.io/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/homotopy.io" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/homotopy.io" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/homotopy.io/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
